完善特殊生成器功能